# ProcessReaderCpp

./: .gitignore  CMakeLists.txt  README.md
gtest/: gtest.cc  gtest_processreader.cc  gtest_processreader.h  gtest_queue.cc  gtest_queue.h  test_proc_status.txt
include/: processreader.h  queue.h
src/: main.cc  processreader.cc  queue.cc
